switch docker to use startup.sh entrypoint