@@ -1,12 +1,4 @@
 -server
 -Xmx1g
 -Xms1g
--Dcom.sun.jndi.ldap.object.disableEndpointIdentification=true
--XX:ErrorFile=/config/logs/java_error%p.log
--Xloggc:/config/logs/gc.log
--XX:+PrintGCDateStamps
--XX:+PrintGCTimeStamps
--XX:+PrintGCDetails
--XX:+UseGCLogFileRotation
--XX:GCLogFileSize=10M
--XX:NumberOfGCLogFiles=10
+-Xlog:gc:file=/config/logs/gc.log:time,uptime,level,tags:filecount=10,filesize=10M
